# garvis

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: audio_capture.cpp  audio_capture.h  audio_devices.cpp  audio_devices.h  audio_mixer.cpp  audio_mixer.h  resample.h
src/config/: config.cpp  config.h
src/llm/: llm.cpp  llm.h
src/pipeline/: tts_streamer.cpp  tts_streamer.h
src/stt/: stt.cpp  stt.h
src/tts/: audio_player.cpp  audio_player.h  tts.cpp  tts.h
src/ui/: app_ui.cpp  app_ui.h
